--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
+  "include": [
+    "src/main/**/*.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
